--- a/public/styles.css
+++ b/public/styles.css
@@ -12,22 +12,30 @@ header {
 }
 
 header h1 {
-    color: beige;
-    font-weight: 200;
+    color: #E4E4D0;
+    font-weight: 500;
     text-align: center;
 }
 
+h2{
+    text-align: center;
+
+}
 body {
     background: #AEC3AE;
     padding: 0 16px;
   }
 
+cards {
+    padding: 32px;
+}
+
 footer {
     background-color: #FFEEF4;
-    position: absolute;
     text-align: center;
+    margin: auto -16px;
+    padding: 32px;
     bottom: 0;
-    width: 100%;
     height: 2.5rem;
   }
   
