--- a/public/styles.css
+++ b/public/styles.css
@@ -14,8 +14,8 @@ header {
 }
 
 header h1 {
-    color: #E4E4D0;
-    font-weight: 500;
+    padding-top: 16px;
+    font-size: 4rem;
     text-align: center;
 }
 
@@ -42,6 +42,9 @@ body {
     padding: 0 16px;
   }
 
+.basicpadding {
+    padding-bottom: 50px;
+}
 cards {
     padding: 32px;
 }
@@ -58,3 +61,9 @@ footer {
   footer p {
     color: #ccc;
   }
+
+.card-img-overlay h3 {
+    text-align: center;
+    bottom: 0;
+    position: absolute;
+}
