--- a/public/styles.css
+++ b/public/styles.css
@@ -67,3 +67,15 @@ footer {
     bottom: 0;
     position: absolute;
 }
+
+.defaultoutlinebutton {
+    padding: 16px;
+}
+
+.dictionary {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 4rem auto;
+    max-width: 90%;
+  }
