--- a/public/styles.css
+++ b/public/styles.css
@@ -66,7 +66,7 @@ h2{
 body {
     background: #94A684;
     background: linear-gradient(#94A684, #AEC3AE, #E4E4D0, #FFEEF4);
-    padding: 0 16px;
+    padding: 0 1vw;
   }
 
 .basicpadding {
