changed navbar bg color to show logo better

--- a/public/styles.css
+++ b/public/styles.css
@@ -51,6 +51,10 @@ header img {
 margin-top: 35px;
 }
 
+nav{
+    background-color: rgb(62, 61, 61);
+}
+
 nav .navbar-nav li a{
     color: white !important;
     font-size: large;
