--- a/public/styles.css
+++ b/public/styles.css
@@ -99,6 +99,12 @@ cards {
     height: 2.5rem;
 }
 
+.contact {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
 .footer {
     background-color: #FFEEF4;
     text-align: center;
@@ -132,4 +138,14 @@ cards {
     justify-content: space-between;
     margin: 4rem auto;
     max-width: 90%;
+  }
+
+  .cardButton {
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 25%;
   }
