--- a/src/styles.css
+++ b/src/styles.css
@@ -11,14 +11,17 @@
   }
   
 header {
-    background-image: url(GreenBG2.jpg);
+    background-image: url("../public/GreenBG2.jpg");
     background-size: cover ;
-    background-position: 80%;
+    background-position: 100% 80%;
     height: 100vh;
     margin: auto -16px;
     padding: 16px;
 
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+}
+.header-text{
+    margin-top: auto;
 }
 
 .headerdiv {
@@ -29,18 +32,17 @@ header {
     padding: 0px !important;
 }
 header h1 {
-    font-size: 5rem;
+    font-size: 5vw;
     text-align: center;
 }
 
 header h2 {
     text-align: center;
     font-size: 2rem;
-
 }
 header img {
-    width: 375px;
-    height: 375px;
+    width: 22vw;
+    height: 22vw;
 }
 
 .headersmall {
@@ -52,8 +54,18 @@ header img {
 margin-top: 35px;
 }
 
+.navbar {
+    transform: translateY(-100%);
+    transition: transform 0.3s ease;
+  }
+  
+  .navbar.scrolled {
+    transform: translateY(0);
+  }
+  
 nav{
     background-color: rgb(62, 61, 61);
+    top: -100px;
 }
 
 nav .navbar-nav li a{
@@ -80,7 +92,6 @@ h2{
 body {
     background: #94A684;
     background: linear-gradient(#94A684, #AEC3AE, #E4E4D0, #FFEEF4);
-    padding: 0 1vw;
   }
 
 .basicpadding {
@@ -129,8 +140,10 @@ cards {
 }
 
 #aboutpic {
-    max-width: 380px;
+    width: 100%;
+    height: auto; /* To maintain the aspect ratio */
 }
+
 
 .dictionary {
     display: flex;
@@ -149,3 +162,51 @@ cards {
     align-items: center;
     width: 25%;
   }
+
+  /* Extra Small Devices (Phones) */
+@media screen and (max-width: 575.98px) {
+    /* Styles for extra small devices (phones) */
+    header img {
+        width: 60vw;
+        height: 60vw;
+        margin-bottom: 5px;
+    }
+    header h1 {
+        font-size: 12vw;
+    }
+    header h2 {
+        font-size: 6.5vw;
+    }
+
+    #aboutpic {
+        padding-bottom: 5vh;
+    }
+    
+    
+  }
+  
+  /* Small Devices (Tablets) */
+  @media screen and (min-width: 576px) and (max-width: 767.98px) {
+    /* Styles for small devices (tablets) */
+  }
+  
+  /* Medium Devices (Laptops and Desktops) */
+  @media screen and (min-width: 768px) and (max-width: 991.98px) {
+    /* Styles for medium devices (laptops and desktops) */
+    #aboutpic {
+        width: 70%;
+        padding-bottom: 5vh;
+    }
+
+  }
+  
+  /* Large Devices (Large Desktops) */
+  @media screen and (min-width: 992px) and (max-width: 1199.98px) {
+    /* Styles for large devices (large desktops) */
+  }
+  
+  /* Extra Large Devices (Extra Large Desktops) */
+  @media screen and (min-width: 1200px) {
+    /* Styles for extra large devices (extra large desktops) */
+  }
+  
