--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,8 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Lexend Deca';font-size: 17px;
+    cursor: none !important;
+
   }
 
   a, a:hover {
