--- a/src/styles.css
+++ b/src/styles.css
@@ -2,17 +2,16 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Lexend Deca';font-size: 17px;
-    cursor: none !important;
-
+    font-family: 'Lexend Deca';
+    font-size: 17px;
   }
 
   a, a:hover {
-    cursor: none !important;
+    cursor: pointer;
   }
 
   button {
-    cursor: none !important;
+    cursor: pointer;
   }
 
   .larger-text {
